test/type/wrong/div1.kk
val wrong : int = recursive()

fun recursive()  {
  recursive()
  return wrong
}